Improve project gallery cards
- Add preview slots for project cards (image + fallback)
- Introduce a more intentional palette + typography tokens
- Add SafeChat project entry with screenshot preview

--- a/content/home.mdx
+++ b/content/home.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Ian Rubenstein"
-subtitle: "Builder focused on interactive tools, great UX, and fast iteration."
+subtitle: "Software architect building data, platform, and agentic pipeline systems — with a bias for great UX."
 ---
 
-I like shipping small, high-polish sites and experiments that make ideas feel tangible.
+I design and build data/platform systems and agentic pipelines — and I like shipping small, high-polish sites when a UI is the best way to make an idea feel tangible.
 
 <Callout variant="tip" title="What’s here">
 
@@ -13,9 +13,9 @@ This site is intentionally **MDX-first**. The bio, CV, and each project live in 
 
 ## Current focus
 
+- Data + platform engineering, with strong architecture fundamentals.
+- Agentic pipelines and tooling that stays practical (fast feedback, clear UX).
 - Turning “notes” into durable, browseable knowledge.
-- Creating small products that feel good to use.
-- Keeping things simple: readable code, tight feedback loops, and thoughtful design.
 
 ## Links
 
