--- a/content/cv.mdx
+++ b/content/cv.mdx
@@ -5,14 +5,12 @@ subtitle: "A lightweight, easy-to-edit résumé page."
 
 ## Snapshot
 
-- **Focus:** product engineering, UI, design systems, content tooling.
-- **Strengths:** fast iteration, clarity in code + docs, strong taste.
+- **Focus:** product engineering, data pipelines, agentic workflows.
+- **Strengths:** fast iteration, abstraction, production infra.
 
 ## Skills
 
-- TypeScript / React
-- MDX content pipelines
-- UI systems + CSS
+- Python, SQL, Cloud
 - Tooling, scripts, and developer experience
 
 ## Selected work
