--- a/content/home.mdx
+++ b/content/home.mdx
@@ -1,13 +1,10 @@
 ---
 title: "Ian Rubenstein"
-subtitle: "Software architect building data, platform, and agentic pipeline systems — with a bias for great UX."
+subtitle: "Software architect, systems thinker, builder."
 ---
 
-I design and build data/platform systems and agentic pipelines — and I like shipping small, high-polish sites when a UI is the best way to make an idea feel tangible.
-
+I design and build data platforms and agentic pipelines. Here are a few toy sites, most are managed by agents. 
 <Callout variant="tip" title="What’s here">
-
-This site is intentionally **MDX-first**. The bio, CV, and each project live in `content/*.mdx` and are rendered with the same components.
 
 </Callout>
 
