--- a/content/home.mdx
+++ b/content/home.mdx
@@ -4,11 +4,10 @@ subtitle: "Software architect, systems thinker, builder."
 ---
 
 I design and build data platforms and agentic pipelines. Here are a few toy sites, most are managed by agents. 
-<Callout variant="tip" title=" urrent focus">
-
-- Data + platform engineering, with strong architecture fundamentals.
-- Agentic pipelines and tooling that stays practical (fast feedback, clear UX).
-- Turning “notes” into durable, browseable knowledge.
+<Callout variant="tip" title="Areas of focus:">
+- Data + platform engineering, with strong architecture fundamentals
+- Agentic pipelines and tooling
+- Continious Learning Systems
 </Callout>
 
 ## Links
