Add generated content section

--- a/content/home.mdx
+++ b/content/home.mdx
@@ -13,5 +13,6 @@ I design and build data platforms and agentic pipelines. Here are a few toy site
 ## Links
 
 - [Projects](/projects)
+- [Generated](/generated)
 - [CV](/cv)
 - [GitHub](https://github.com/hapticPaper)
